# a-simple-llm-wallet

./: .gitignore  README.md  SECURITY.md  TEST.md  install.sh  package-lock.json  package.json  providers.json  uninstall.sh
app/: fix-dmg-layout.sh  index.html  install-desktop.sh  package-lock.json  package.json
app/src/: App.module.css  App.tsx  index.css  main.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src/components/: ChatView.module.css  ChatView.tsx  DeleteConfirm.module.css  DeleteConfirm.tsx  EmptyState.module.css  EmptyState.tsx  ExportView.module.css  ExportView.tsx  HomeView.module.css  HomeView.tsx  ProviderDetail.module.css  ProviderDetail.tsx  ProviderForm.module.css  ProviderForm.tsx  Sidebar.module.css  Sidebar.tsx
app/src/hooks/: useProviders.ts
app/src/theme/: tokens.css
desktop/: install-desktop.sh  vite.config.ts
desktop/src/: App.tsx  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: DeleteConfirm.module.css  DeleteConfirm.tsx  ExportView.module.css  ExportView.tsx  ProviderDetail.module.css  ProviderDetail.tsx  ProviderForm.module.css  ProviderForm.tsx  Sidebar.module.css  Sidebar.tsx
desktop/src/hooks/: useProviders.ts  useTheme.ts
desktop/src/theme/: tokens.css
docs/: DEBUG.md  HOW-TO-RELEASE.md
notebook/: HowToPublish.md
src/: banner.ts  chat.ts  cli.ts  env-export.ts  storage.ts  types.ts  wallet.ts
src/tests/: chat.test.ts  env-export.test.ts  wallet.test.ts
