[package]
name = "llm-wallet-desktop"
version = "0.1.0"
description = "LLM Wallet Desktop"
authors = ["cwang0126"]
edition = "2021"

[lib]
name = "llm_wallet_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
